// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-dlnkDq iIJZep"
  >
    <a
      class="sc-bdnAzI cAHJWl"
      href="/some/path"
    >
      <div
        class="sc-hKFxUR rTqsk"
      >
        <img
          src=""
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-dlnkDq iIJZep"
  >
    <div
      class="sc-gtstET eMrqxt"
    >
      <div
        class="sc-hKFxUR rTqsk"
      >
        <img
          src=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-dlnkDq iIJZep"
  >
    <div
      class="sc-gtstET eMrqxt"
    >
      <div
        class="sc-hKFxUR rTqsk"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
